[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-seismic-log"
version = "1.0.0"
description = "Topological Truth Verification for Thermodynamic AI Models - S-ToT Protocol"
readme = "README.md"
authors = [
  { name = "Genesis Conductor Engine", email = "genesis@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "jax",
    "jaxlib",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/Genesis-Conductor-Engine/genesis-seismic-log"
"Bug Tracker" = "https://github.com/Genesis-Conductor-Engine/genesis-seismic-log/issues"
